<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Give &amp; Take</string>
    <string name="menu_settings">Settings</string>
    <string name="browse_coupons_string">My Coupons</string>
    <string name="search_coupons_string">Buy a Book</string>
    <string name="search_coupons_title_string">Who are you\ndonating to?</string>
    <string name="no_group_button_text">No Specific Charity</string>
    <string name="no_group_explanation">Your Donation Will Be Given to a Randomly Selected Local Charity</string>
    <string name="go_to_map_string">Go To Map</string>
    <string name="map_string">Map</string>
    <string name="title_pic_desc">Application Logo</string>
    <string name="picture_desc">Picture</string>
    <string name="title_activity_search_new_coupons">Find New Coupons</string>
    <string name="search_hint">Search Organizations</string>
    <string name="search_string">Search</string>
    <string name="go_string">Go</string>
    <string name="buy_string">Buy</string>
    <string name="preview_string">Preview</string>
    <string name="coupon_string">Coupon</string>
    <string name="submit_string">Submit</string>
    <string name="cancel_string">Cancel</string>
    <string name="nearest_string">Nearest</string>
    <string name="az_string">A-Z</string>
    <string name="ending_soon_string">Ending Soon</string>
    <string name="default_coupon_book_value">Great Value!</string>
    <string name="title_activity_browse_coupons">Browse Coupons</string>
    <string name="use_coupon_title">Use Coupon Now?</string>
    <string name="coupon_use_confirm_message">You must be at the retailer to show coupon.\n Once used, coupon will disappear.</string>
    <string name="no_coupons_message">You don\'t have any coupons!</string>
    <string name="get_new_coupons_string">Get New Coupons</string>
    <string name="fundraise_with_us_string">Fundraise with Us</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_fullscreen_coupon">FullscreenCoupon</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_choose_coupon_book">Choose Coupon Book</string>
    <string name="title_activity_coupon_book_array_adapter">CouponBookArrayAdapter</string>
    <string name="cash_code_title_string">Please enter cash code provided to you by seller:</string>
    <string name="seller_code_title_string">Thank you for helping!  Please enter seller\'s ID code:</string>
    <string name="enter_seller_code_hint">Ex: ABC123</string>
    <string name="no_seller_code_string">No Specific Seller</string>
    <string name="title_activity_enter_seller_id_dialog">Enter Seller ID Code</string>
    <string name="title_activity_enter_cash_code_dialog">Enter Cash Code</string>
    <string name="title_activity_choose_payment_option">Choose Payment Option</string>
    <string name="choose_payment_option_string">Choose Payment Option</string>
    <string name="choose_in_app_pay_string">Google Play</string>
    <string name="choose_credit_card_pay_string">Credit Card</string>
    <string name="choose_cash_pay_string">Cash</string>
    <string name="title_activity_coupon_display">CouponDisplayActivity</string>
    <string name="redeem_coupon_string">Redeem Coupon</string>
    <string name="more_info_string"><u>Company Info/More Offers</u></string>
    <string name="coup_confirm_code_title_string">Please Enter the Coupon Confirmation Code Below</string>
    <string name="title_activity_coupon_used_display">CouponUsedDisplay</string>
    <string name="coupon_used_thank_you_message">Thank you for using Give &amp; Take!  We hope you continue to take advantage of great values like this one!</string>
    <string name="title_activity_enter_coup_confirm_code">Enter Confirmation Code</string>
    <string name="options_string">Options</string>
    <string name="categories_string">Categories</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="keep_logged">Keep Me Logged In</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register New User</string>
    <string name="title_activity_register_new_user">RegisterNewUserActivity</string>
    <string name="title_activity_preview_coupons">Preview Coupon Book</string>
    <string name="email_string">Email</string>
    <string name="first_name_string">First Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="confirm_pw_string">Confirm Password:</string>
    <string name="title_activity_company_info_more_offers">CompanyInfoMoreOffersActivity</string>
    <string name="title_activity_enter_credit_card_info_dialog">Pay With Credit Card</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credit_card_info_title_string">Thank you for helping!  Please enter your credit card information:</string>
    <string name="credit_card_number_prompt">Credit Card Number:</string>
    <string name="credit_card_CVC_prompt">CVC Code:</string>
    <string name="credit_card_exp_date_month_prompt">Exp. Date Month:</string>
    <string name="credit_card_exp_date_year_prompt">Exp. Date Year:</string>
    <string name="credit_card_number_hint">No Spaces</string>
    <string name="credit_card_CVC_hint">3 or 4 digits</string>
    <string name="credit_card_exp_date_month_hint">2 digit month</string>
    <string name="credit_card_exp_date_year_hint">4 digit year</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="action_settings">Settings</string>

</resources>