<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BrowseCouponsActivity" >
        
    <LinearLayout
        android:id="@+id/browse_coupons_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bckgrnd_color"
        android:orientation="horizontal" >
        <Button 
            android:id="@+id/buy_book_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
			android:text="@string/buy_string"
			android:onClick="onClickBuyButton"/>
        <ImageView android:id="@+id/browse_coupons_title_bar_logo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/browse_coupons_title"
            android:contentDescription="@string/dummy_content"/>
        <Button
            android:id="@+id/launch_categories_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/categories_button"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/coupon_search_bar_and_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_coupons_title_bar"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingTop="5dp"      
        android:paddingBottom="5dp"  
        android:paddingRight="5dp"
        android:background="@color/button_bckgrnd_color"
        android:orientation="horizontal" >
	    <AutoCompleteTextView 
	         
			android:id="@+id/coupon_search_text_box"
			style="@style/EditTextBoxes"
			android:layout_weight="1"    	    
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/search_string"
		    android:inputType="textCapWords" />  
		    
	    <Button 
	        android:id="@+id/exec_coup_search_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dp"
	        android:text="@string/go_string"
	        style="@style/ExecSearchButton" />
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/sort_filter_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coupon_search_bar_and_button"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@color/blue"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/sort_by_nearest_button"
            style="@style/SortCouponButtons"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/nearest_string"
            android:onClick="sortByNearest" />
        
        <Button
            android:id="@+id/go_to_map_button"
            style="@style/SortCouponButtons"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/map_string"
            android:onClick="goToMap" />
        
        <Button
            android:id="@+id/sort_by_ending_soon_button"
            style="@style/SortCouponButtons"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ending_soon_string"
            android:onClick="sortByEndingSoon" />
        
        <Button
            android:id="@+id/sort_by_az_button"
            style="@style/SortCouponButtons"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/az_string"
            android:onClick="sortAlphabetically" />
    </LinearLayout>

	
	<ListView
	    android:id="@+id/couponList"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/sort_filter_buttons"
	    android:dividerHeight="1dp"
	    android:divider="@color/black" >
    </ListView>
    
</RelativeLayout>