<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/cash_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash_code_title_string"
        android:textSize="15sp"
        android:textColor="@color/white" />
    
    <EditText
        android:id="@+id/cash_code_input_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	
	    <Button
	        android:id="@+id/submit_cash_code_button"
	        style="@style/HomeScreenButtons"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
			android:layout_gravity="center"
			android:layout_marginBottom="20dp"
	        android:text="@string/submit_string"
	        android:onClick="onSubmit" />
	    <Button
	        android:id="@+id/cancel_seller_code_button"
	        style="@style/HomeScreenButtons"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
	        android:text="@string/cancel_string"
	        android:onClick="onCancel" />
        
</LinearLayout>