<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
            
    <RelativeLayout
        android:id="@+id/coupon_display_title_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bckgrnd_color"
        android:orientation="horizontal" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/title_bar"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/dummy_content"
            />
        <Button 
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
            android:text="Back"
            android:onClick="clickBackButton" />
    </RelativeLayout>
    
	<LinearLayout 
	    android:id="@+id/coupon_display_block"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_weight="15"
	    android:layout_height="0px">
	    <ImageView 
	        android:id="@+id/company_logo"
	        android:layout_weight="1"
	        android:layout_width="0px"
	        android:layout_height="fill_parent"
	        android:src="@drawable/splash"
	        android:contentDescription="@string/dummy_content" />
	    
	    <LinearLayout
	        android:id="@+id/company_information_box"
	        android:layout_weight="2"
	        android:layout_width="0px"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical|center_horizontal"
			android:orientation="vertical"
	        android:paddingRight="5dp">

	        <TextView
	            android:id="@+id/company_name_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="35sp" >
	        </TextView>
	        	        

	        <TextView
	            android:id="@+id/company_address_1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="15sp" >
	        </TextView>

	        <TextView
	            android:id="@+id/company_address_2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="15sp" >
	        </TextView>
	        
	        <TextView 
	            android:id="@+id/more_info_link"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:text="@string/more_info_string"
	            android:textColor="@color/red"
	            android:clickable="true"
	            android:onClick="onClickMoreOffers"  >
	        </TextView>
	    </LinearLayout>
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/coupon_details_box"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal|center_vertical"
	    android:orientation="vertical"
	    android:padding="10dp" >
		<TextView 
		    android:id="@+id/coupon_details_1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="35sp"
		    android:textColor="@color/red" >
		</TextView>
		    
		<TextView 
		    android:id="@+id/coupon_details_2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="25sp"
		    android:textColor="@color/black" >
		</TextView>
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/coup_disp_button_box"
	    android:layout_weight="10"
	    android:layout_height="0px"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:orientation="vertical" >

		<Button
		    android:id="@+id/redeem_coupon_button"
		    style="@style/HomeScreenButtons"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginBottom="10dp"
		    android:onClick="onRedeemCoupon"
		    android:text="@string/redeem_coupon_string" >

		</Button>
		
		<Button
		    android:id="@+id/cancel_use_coupon_button"
		    style="@style/HomeScreenButtons"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:onClick="onCancelClick"
		    android:text="@string/cancel" >

		</Button>
	</LinearLayout>
  
</LinearLayout>